# bubble-network

./: README.md  pyproject.toml
bubble_network/: main.py
bubble_network/parser/: csv_parser.py  parser.py  xlsx_parser.py
bubble_network/renderer/: __init__.py  diagram_renderer.py
examples/: example.CSV  example.xlsx
src/: main.py
src/parser/: xlsx_parser.py
